# rezound

./: CMakeLists.txt  TODO.txt  configure.ac
po/: CMakeLists.txt  Makevars  POTFILES.in  README  conv.sh  cs.po  fr.po  rezound.pot  ru.po  scan-and-merge.sh
rezound/: Makefile.am  README  README.GL_PROBLEMS  bootstrap  configure.ac  configure.in  libtool.GL.patch  libtool.add  libtool.patch  make_standalone.sh
rezound/config/: acconfig.h  am_include.mk  common.h
rezound/config/m4/: audiofile.m4  cxx-lib.m4  cxx.m4  libFLAC++.m4  libFLAC.m4  ogg.m4  soundtouch.m4  sstream.m4  stdint.m4  vorbis.m4
rezound/config/platform/: bsd.h  solaris.h
rezound/docs/: AUTHORS  COPYING  CVS-INSTALL  Features.txt  FrontendFoxFeatures.txt  INSTALL  Makefile.am  NEWS  README  README_DOCS  SVN-INSTALL  TODO_FOR_USERS_TO_READ
rezound/docs/code/: AudioIO  ClipboardEditing  Crossfading  SoundChannels  SoundFileFormats
rezound/docs/devel/: AutoMake-guide  ChangeLog_autotools.txt  ChangeLog_v0.1prealpha  README_1st  TODO  TODO_autoconf  TODO_release
rezound/packaging/debian/: README.cvs  changelog  control  deb-prep.sh  menu  postinst  preinst  prerm  rules
rezound/packaging/generic_rpm/: rezound.spec
rezound/po/: LINGUAS  Makevars  POTFILES.in  README  cs.po  de.po  es.po  fi.po  fr.po  rezound.pot  ru.po
rezound/share/: Makefile.am
rezound/src/: Makefile.am  VerifySourceFiles.sh
rezound/src/PoolFile/: CMultiFile.cpp  CMultiFile.h  Makefile.am  TODO  TPoolAccesser.cpp  TPoolAccesser.h  TPoolFile.cpp  TPoolFile.h  TStaticPoolAccesser.cpp  TStaticPoolAccesser.h  test.cpp
rezound/src/backend/: AAction.cpp  AAction.h  AActionDialog.cpp  AActionDialog.h  AActionParamMapper.h  AFrontendHooks.cpp  AFrontendHooks.h  ALFO.cpp  ALFO.h  ASound.cpp  ASound.h  ASoundClipboard.cpp  ASoundClipboard.h  ASoundFileManager.cpp  ASoundFileManager.h  ASoundPlayer.cpp  ASoundPlayer.h  ASoundRecorder.cpp  ASoundRecorder.h  ASoundTranslator.cpp  ASoundTranslator.h  AStatusComm.cpp  AStatusComm.h  ApipedSoundTranslator.cpp  CALSASoundPlayer.cpp  CALSASoundRecorder.cpp  CActionParameters.cpp  CActionParameters.h  CActionSound.cpp  CActionSound.h  CEnvelope.cpp  CEnvelope.h  CFLACSoundTranslator.cpp  CFLACSoundTranslator.h  CGraphParamValueNode.cpp  CGraphParamValueNode.h  CJACKSoundPlayer.cpp  CJACKSoundPlayer.h  CJACKSoundRecorder.cpp  CJACKSoundRecorder.h  (+80 more)
rezound/src/frontend_fox/: AActionParamMapper.cpp  ActionParamMappers.h  CAboutDialog.cpp  CAboutDialog.h  CActionButton.cpp  CActionButton.h  CActionMenuCommand.cpp  CActionMenuCommand.h  CActionParamDialog.cpp  CActionParamDialog.h  CChannelSelectDialog.cpp  CChannelSelectDialog.h  CConstantParamActionDialog.cpp  CConstantParamActionDialog.h  CCrossfadeEdgesDialog.cpp  CCrossfadeEdgesDialog.h  CCueDialog.cpp  CCueDialog.h  CCueListDialog.cpp  CCueListDialog.h  CEditToolbar.cpp  CEditToolbar.h  CFrontendHooks.cpp  CFrontendHooks.h  CGraphParamActionDialog.cpp  CGraphParamActionDialog.h  CJACKPortChoiceDialog.cpp  CJACKPortChoiceDialog.h  CKeyBindingsDialog.cpp  CLADSPAActionDialog.cpp  CLADSPAActionDialog.h  CMIDIDumpSampleIdDialog.cpp  (+95 more)
src/backend/: AAction.cpp  AAction.h  AActionDialog.cpp  AActionDialog.h  AFrontendHooks.h  ASoundClipboard.cpp  ASoundFileManager.cpp  ASoundPlayer.cpp  ASoundPlayer.h  ASoundRecorder.cpp  ASoundRecorder.h  ASoundTranslator.cpp  AStatusComm.cpp  AStatusComm.h  ApipedSoundTranslator.h  CALSASoundPlayer.cpp  CALSASoundPlayer.h  CALSASoundRecorder.cpp  CALSASoundRecorder.h  CActionParameters.h  CActionSound.cpp  CFLACSoundTranslator.cpp  CJACKSoundPlayer.cpp  CJACKSoundPlayer.h  CJACKSoundRecorder.cpp  CJACKSoundRecorder.h  CLoadedSound.cpp  CLoadedSound.h  CMIDISDSSoundTranslator.cpp  CMIDISDSSoundTranslator.h  CMacroPlayer.cpp  CMacroRecorder.h  CMakeLists.txt  CNativeSoundClipboard.cpp  COSSSoundPlayer.cpp  COSSSoundPlayer.h  COSSSoundRecorder.cpp  COSSSoundRecorder.h  CPluginMapping.h  CPortAudioSoundPlayer.cpp  (+29 more)
src/frontend_fox/: CAboutDialog.h  CActionMenuCommand.cpp  CActionParamDialog.cpp  CActionParamDialog.h  CChannelSelectDialog.cpp  CChannelSelectDialog.h  CCrossfadeEdgesDialog.cpp  CCueDialog.h  CCueListDialog.cpp  CCueListDialog.h  CFrontendHooks.cpp  CFrontendHooks.h  CKeyBindingsDialog.cpp  CKeyBindingsDialog.h  CLADSPAActionDialog.cpp  CLADSPAActionDialog.h  CMacroActionParamsDialog.cpp  CMainWindow.cpp  CMakeLists.txt  CMetersWindow.cpp  CMetersWindow.h  CMp3Dialog.cpp  CMp3Dialog.h  CNewSoundDialog.cpp  CNewSoundDialog.h  COggDialog.cpp  CProgressDialog.cpp  CProgressDialog.h  CRecordMacroDialog.h  CRezSaveParametersDialog.cpp  CRezSaveParametersDialog.h  CSoundFileManager.h  CStatusComm.cpp  CUserNotesDialog.cpp  ClibaudiofileSaveParametersDialog.cpp  ClibaudiofileSaveParametersDialog.h  EditActionDialogs.h  EffectActionDialogs.h  FXBackBufferedCanvas.h  FXCheckBoxParamValue.cpp  (+29 more)
src/misc/: AThread.cpp  AThread.h  CAtomicCounter.h  CConditionVariable.h  CMakeLists.txt  CMutex.cpp  CMutex.h  CRWMutex.cpp  CRWMutex.h  Makefile.am  README  ScopedAutoReleasePool.h  TAutoBuffer.h  TMemoryPipe.cpp  TMemoryPipe.h  auto_array.h  clocks.h  endian_util.h  istring  urlencode.h
src/qt/: .ProgressDialog.h.kate-swp  CCrossfadeEdgesDialog.cpp  CCrossfadeEdgesDialog.h  CDurationSpinBox.h  CFrequencyAnalyzer.cpp  CFrequencyAnalyzer.h  CFrontendHooks.cpp  CFrontendHooks.h  CKeyBindingsDialog.h  CKeyBindingsDialogContent.ui  CLADSPAActionDialog.cpp  CLADSPAActionDialog.h  CLevelMeters.cpp  CLevelMeters.h  CMIDISampleDumpParametersDialog.cpp  CMIDISampleDumpParametersDialog.h  CMacroActionParamsDialog.h  CMacroActionParamsDialogContent.ui  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  CMiscControlsWindow.cpp  CMiscControlsWindow.h  CMiscControlsWindow.ui  CModalDialog.cpp  CModalDialog.h  CModalDialog.ui  CMp3SaveParametersDialog.cpp  CMp3SaveParametersDialog.h  CNewSoundDialog.h  CNewSoundDialogContent.ui  COggSaveParametersDialog.cpp  COggSaveParametersDialog.h  CProgressDialog.h  CProgressDialog.ui  CRawParametersDialog.cpp  CRawParametersDialog.h  CRecentActionsMenu.h  CRecordDialog.h  (+117 more)
(+419 files in other folders)
